# switchbot-thermometer-reader

./: README.md  pyproject.toml  requirements.txt  switchbot_thermometer.py
switchbot_thermometer_reader/: __init__.py  switchbot_thermometer.py
