[tool.poetry]
name = "switchbot-thermometer-reader"
version = "0.1.0"
description = ""
authors = ["riccardomc <ciao@cefala.net>"]
readme = "README.md"
packages = [{include = "switchbot_thermometer_reader"}]

[tool.poetry.dependencies]
python = "^3.7"
bleak = "^0.19.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
